Version 2.4.3
-------------------------------------------------------------------
20 February 2008
+ nakedDisplay now allows a choice whether to use the blank template
  or not when it wraps. Default is to not.

23 January 2008
+ Fixed noCache.

Version 2.4.2
-------------------------------------------------------------------
30 August 2007
+ Rewrote Box settings to Arrange tab.
+ Box move and reset boxes are now links, not form buttons.
+ Additional authorized checks added
+ Updated: remove templates/BoxControl.tpl, add templates/arrange.tpl

27 August 2007
+ addStyle function now allows multiple style sheets per module. Still
  only includes a file once.
+ Increased height of move box popup

22 August 2007
+ Rewrote Layout's move box code. Removed drop down boxes.
+ Updated: conf/error.php, templates/move_box_select.tpl

Version 2.4.1 -- 25 July 2007
-------------------------------------------------------------------
27 June 2007
+ Bug #1741111 - Fixed moving a top box up and a bottom box down.

29 May 2007
+ The cookie check is not determined by a define in the config file.
+ Updated files: conf/config.php

22 May 2007
+ The cookie check was interfering with the rss feed. Cut off the page
  too quickly. Moved cookie check to the close.php file.

Version 2.4.0
-------------------------------------------------------------------
16 April 2007
+ Layout now checks and forces a user to enable cookies on their
  browser. 
+ Rewrote Javascript detection. Was buggy before as session
  destruction could disrupt it.
+ Updated files: templates/no_cookie.tpl

4 April 2007
+ Added German translations
+ Updated language functions

19 March 2007
+ Fixed: bug in Layout confused a user's style sheet settings after
  the theme was changed.

12 March 2007
+ Rewrote theme change code.
+ Added ability to force theme on layout settings construction.

5 March 2007
+ Changed control panel icon

Version 2.3.0
-------------------------------------------------------------------