@@ -1,3 +1,9 @@
+28 April 2008
++ Changed method of checking for javascript status. Less chance for
+  error.
++ Fixed notice.
++ Updated : templates/user_form.tpl
+
 Version 2.4.3
 -------------------------------------------------------------------
 20 February 2008
